syntax = "proto3";

package customer;
option go_package = "./customer";

message RequestDataCustomer {
  string email = 1;
  string name = 2;
  string phone_number = 3;
}

message RequestDataCheckout {
  string email = 1;
  string name = 2;
  string phone_number = 3;
  int64 product_sales_id = 4;
  int64 qty = 5;
  int64 total_pricing = 6;
  string payment_reference = 7;
  string payment_domain = 8;
  int64 customer_id = 9;
  string list_key = 10;
  string invoice = 11;
  string type_duration = 12;
  string pricing = 13;
  string discount = 14;
  string tax = 15;
  string status = 16;
  string references  = 17;
}

message RequestProductIDAndLimit {
  string product_id = 1;
  string limit = 2;
}

message RequestCheckStok {
  int32 product_id = 1;
}

message RequestProductSerialNumber {
  string serial_number = 1;
}

message ResponseDataCheckout {
  string email = 1;
  string name = 2;
  string phone_number = 3;
  int64 product_sales_id = 4;
  int64 qty = 5;
  int64 total_pricing = 6;
  string payment_reference = 7;
  string payment_domain = 8;
  int64 customer_id = 9;
  string list_key = 10;
  string invoice = 11;
  string type_duration = 12;
  string pricing = 13;
  string discount = 14;
  string tax = 15;
  string status = 16;
}

service CustomerUseCaseService {
  rpc PostCustomer(RequestDataCustomer) returns (EmptyResponse);
  rpc PostCheckout(RequestDataCheckout) returns (EmptyResponse);
  rpc PartnerCheckout(RequestDataCheckout) returns (EmptyResponse);
  rpc GetCheckoutByKeyNumber(RequestProductSerialNumber) returns (ResponseDataCheckout);
  rpc CheckStok(RequestCheckStok) returns (EmptyResponse);
}

message EmptyResponse {}